# auto_3dgs

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml  run_pipeline.py
auto_recon/: __init__.py  equirect_to_perspective.py  lichtfeld_3dgs.py  metashape_sfm.py  pano_render.py  preprocessing.py  sam3_masking.py  sfm_backend.py  sfm_colmap.py  sfm_metashape.py  sfm_realityscan.py
auto_recon/dart_trt/: __init__.py  multiclass.py  multiclass_fast.py  trt_backbone.py  trt_enc_dec.py
scripts/: build_lichtfeld_linux.sh  build_trt_engines.py  export_hf_backbone.py
