[project]
name = "auto-recon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "metashape",
    "opencv-python>=4.11.0.86",
    "sam3",
    "pillow>=12.1.1",
    "pymupdf>=1.27.2.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "xformers>=0.0.35",
    "einops>=0.8.2",
    "pycocotools>=2.0.11",
    "psutil>=7.2.2",
    "scipy>=1.17.1",
]

[tool.uv]
environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = " https://download.pytorch.org/whl/cu130"
explicit = true


[tool.uv.sources]
metashape = [
  { url = "https://download.agisoft.com/metashape-2.3.0-cp39.cp310.cp311.cp312.cp313-none-win_amd64.whl", marker = "sys_platform == 'win32'" },
  { url = "https://download.agisoft.com/metashape-2.3.0-cp39.cp310.cp311.cp312.cp313-abi3-linux_x86_64.whl", marker = "sys_platform == 'linux'" },
]
sam3 = { workspace = true, editable = true }
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.uv.workspace]
members = [
    "sam3",
]

